deployments/k8s/aws/zeus.yml
apiVersion: v1
kind: Namespace
metadata:
  name: zeus
---
apiVersion: v1
kind: Service
metadata:
  name: zeus
  namespace: zeus
  labels:
    app: zeus
spec:
  ports:
  - port: 8080
    name: zeus
  clusterIP: None
  selector:
    app: zeus
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: zeus
  namespace: zeus
spec:
  serviceName: "zeus"
  replicas: 1
  template:
    metadata:
      labels:
        app: zeus
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: dirigible
          image: dirigiblelabs/dirigible-tomcat:2.8.170821-R
          ports:
            - containerPort: 8080
              name: zeus
          volumeMounts:
            - name: root
              mountPath: /usr/local/tomcat/dirigible
      serviceAccountName: zeus
  volumeClaimTemplates:
    - metadata:
        name: root
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: zeus
  namespace: zeus
spec:
  rules:
    - host: zeus.apps.eu-central-1.sap.onvms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: zeus
              servicePort: 8080
